@@ -628,7 +628,7 @@ package body Exp_Prag is
                     Expression => Make_Identifier (Loc, Chars (Dum))),
 
                   Make_Pragma_Argument_Association (Loc,
-                    Chars => Name_Link_Name,
+                    Chars => Name_External_Name,
                     Expression => Relocate_Node (Rtti_Name))))));
 
             Rewrite (Expression (Foreign_Data),
